kubernetes/example-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
  labels:
    app: example-pod-app-label
spec:
  containers:
  - name: example-container
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
    ports:
    - containerPort: 80
    restartPolicy: Always
