kubernetes/my-pod-2.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: my-pod-2
  labels:
    app: myapp
spec:
  containers:
  - name: my-container
    image: nginx:latest
    ports:
    - containerPort: 80
  restartPolicy: Always
