kubernetes/my-pod-3-env-variables.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-3
  labels:
    name: my-pod-3-label
spec:
  containers:
    - name: my-container-3
      image: busybox
