kubernetes/my-pod-4-mount-volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-4
  labels:
    name: my-pod-4-label
spec:
  containers:
    - name: my-container-4
      image: busybox
      volumeMounts:
      - name: config-vol
        mountPath: /etc/config  # Đường dẫn trong container
        readOnly: true
      - name: secret-vol
        mountPath: /etc/secret
  volumes:
    - name: config-vol  
      configMap:
        name: my-configmap
        items: # Optional, chỉ mount key cụ thể
          - key: config.properties
            path: app.conf # Tên file trong volume
    - name: secret-vol
      secret:
        secretName: my-secret
        items:
          - key: password
            path: db-pass.txt
            mode: 0400 # Permissions, chỉ owner đọc được
