kubernetes/my-pod-5-env-variables.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-5
  labels:
    name: my-pod-5-label
spec:
  containers:
    - name: my-container-5
      image: alpine
      resources:
        limits:
          cpu: "200m"
      command: ["/bin/sh"] # Override ENTRYPOINT
      args: ["-c", "echo $STATIC_VAR $CONFIG_VAR $SECRET_VAR $POD_NAME $CPU_LIMIT && sleep 60"] # Override CMD, có thể dùng env vars
      envFrom: # Inject toàn bộ ConfigMap/Secret làm env vars (prefix optional)
        - configMapRef:
            name: my-configmap
        - secretRef:
            name: my-secret
          prefix: DB_ # Optional, prefix keys
