kubernetes/pod-with-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-config
spec:
  containers:
    - name: my-container
      image: busybox
      command: ["sh", "-c", "sleep 3600"]
      volumeMounts:
        - name: app-config-volume
          mountPath: /etc/config
        - name: db-secret-volume
          mountPath: /etc/secret
  volumes:
    - name: app-config-volume
      configMap:
        name: app-config
    - name: db-secret-volume
      secret:
        secretName: db-secret


# PS D:\devops\dev-devops-exp> kubectl describe pod pod-with-config
# Name:             pod-with-config
# Namespace:        default
# Priority:         0
# Service Account:  default
# Node:             minikube/192.168.49.2
# Start Time:       Fri, 23 Jan 2026 18:05:04 +0700
# Labels:           <none>
# Annotations:      <none>
# Status:           Running
# IP:               10.244.0.20
# IPs:
#   IP:  10.244.0.20
# Containers:
#   my-container:
#     Container ID:   docker://6257bd7c2fcb0644af404241b0eda322152689be7a959bc86db51a6da017c75b
#     Image:          busybox
#     Image ID:       docker-pullable://busybox@sha256:e226d6308690dbe282443c8c7e57365c96b5228f0fe7f40731b5d84d37a06839
#     Port:           <none>
#     Host Port:      <none>
#     State:          Waiting
#       Reason:       CrashLoopBackOff
#     Last State:     Terminated
#       Reason:       Completed
#       Exit Code:    0
#       Started:      Fri, 23 Jan 2026 18:05:18 +0700
#       Finished:     Fri, 23 Jan 2026 18:05:18 +0700
#     Ready:          False
#     Restart Count:  1
#     Environment:    <none>
#     Mounts:
#       /etc/config from app-config-volume (rw)
#       /etc/secret from db-secret-volume (rw)
#       /var/run/secrets/kubernetes.io/serviceaccount from kube-api-access-ptjj9 (ro)
# Conditions:
#   Type                        Status
#   PodReadyToStartContainers   True
#   Initialized                 True
#   Ready                       False
#   ContainersReady             False
#   PodScheduled                True
# Volumes:
#   app-config-volume:
#     Type:      ConfigMap (a volume populated by a ConfigMap)
#     Name:      app-config
#     Optional:  false
#   db-secret-volume:
#     Type:        Secret (a volume populated by a Secret)
#     SecretName:  db-secret
#     Optional:    false
#   kube-api-access-ptjj9:
#     Type:                    Projected (a volume that contains injected data from multiple sources)
#     TokenExpirationSeconds:  3607
#     ConfigMapName:           kube-root-ca.crt
#     ConfigMapOptional:       <nil>
#     DownwardAPI:             true
# QoS Class:                   BestEffort
# Node-Selectors:              <none>
# Tolerations:                 node.kubernetes.io/not-ready:NoExecute op=Exists for 300s
#                              node.kubernetes.io/unreachable:NoExecute op=Exists for 300s
# Events:
#   Type     Reason     Age                From               Message
#   ----     ------     ----               ----               -------
#   Normal   Scheduled  30s                default-scheduler  Successfully assigned default/pod-with-config to minikube
#   Normal   Pulled     24s                kubelet            Successfully pulled image "busybox" in 5.768s (5.768s including waiting). Image size: 4425286 bytes.
#   Normal   Pulled     17s                kubelet            Successfully pulled image "busybox" in 6.272s (6.272s including waiting). Image size: 4425286 bytes.
#   Normal   Created    16s (x2 over 24s)  kubelet            Created container: my-container
#   Normal   Started    16s (x2 over 24s)  kubelet            Started container my-container
#   Warning  BackOff    15s (x2 over 16s)  kubelet            Back-off restarting failed container my-container in pod pod-with-config_default(14fe6e95-b78f-401f-b9c0-2f116652c436)
#   Normal   Pulling    1s (x3 over 30s)   kubelet            Pulling image "busybox"
