kubernetes/pod-with-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-pod
spec:
  volumes:
  - name: persistent-storage
    persistentVolumeClaim:
      claimName: local-pvc
  containers:
  - name: db-container
    image: busybox
    command: ['sh', '-c', 'echo "Persistent Data" > /db/data.txt && sleep 3600']
    volumeMounts:
    - name: persistent-storage
      mountPath: /db
