kubernetes/probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: probe-pod
spec:
  containers:
  - name: app
    image: nginx
    livenessProbe:  # HTTPGet example
      httpGet:
        path: /
        port: 80
        scheme: HTTP
      initialDelaySeconds: 3
      periodSeconds: 3
    readinessProbe:  # Exec example
      exec:
        command: ["cat", "/tmp/healthy"]
      initialDelaySeconds: 5
      periodSeconds: 5
    startupProbe:  # TCP example
      tcpSocket:
        port: 80
      failureThreshold: 30
      periodSeconds: 10
    lifecycle:
      postStart:
        exec:
          command: ["/bin/sh", "-c", "touch /tmp/healthy"]


## Simulate fail

# apiVersion: v1
# kind: Pod
# metadata:
#   name: probe-pod
# spec:
#   containers:
#   - name: app
#     image: nginx
#     livenessProbe:  # HTTPGet example
#       httpGet:
#         path: /fail-me
#         port: 80
#         scheme: HTTP
#       initialDelaySeconds: 3
#       periodSeconds: 2
#       failureThreshold: 1
#     readinessProbe:  # Exec example
#       exec:
#         command: ["cat", "/tmp/healthy"]
#       initialDelaySeconds: 5
#       periodSeconds: 5
#     startupProbe:  # TCP example
#       tcpSocket:
#         port: 80
#       failureThreshold: 30
#       periodSeconds: 10
#     lifecycle:
#       postStart:
#         exec:
#           command: ["/bin/sh", "-c", "touch /tmp/healthy"]
