kubernetes/resource-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resource-pod
spec:
  containers:
    - name: app
      image: nginx
      resources:
        requests:
          cpu: "100m"     # 0.1 CPU
          memory: "128Mi"
        limits:
          cpu: "200m"
          memory: "256Mi"
