kubernetes/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-yaml
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
