kubernetes/endpoint-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-external
spec:
  ports:
    - port: 80
      targetPort: 8080
