kubernetes/endpoint-service-2.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: backend-external
subsets:
  - addresses:
      - ip: 203.0.113.10
    ports:
      - port: 8080
