kubernetes/policy-deny_all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

# Mẹo: Deny all trước, rồi thêm các rule allow cụ thể.
